# parrot-chat

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: main_parrotchat.yml
chroma_db/: chroma.sqlite3
src/: ai_engine.py  constants.py  examples.py  loader.py  rag_engine.py
