[project]
name = "chatbot-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "streamlit>=1.45.1",
    "protobuf==3.20.3",
    "pypdf2>=3.0.1",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "dotenv>=0.9.9",
]
